# Sim4Rec

./: .buildinfo  .pylintrc  README.md  cuda102.Dockerfile  genindex.html  index.html  objects.inv  piplist.txt  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  rs_performance_evaluation_latest.ipynb  search.html  searchindex.js  ucb.py
Sim4Rec-replay-removed/: Dockerfile  LICENSE  pyproject.toml  requirements.txt
Sim4Rec-replay-removed/docs/source/: index.rst
Sim4Rec-replay-removed/docs/source/pages/: modules.rst
Sim4Rec-replay-removed/experiments/: amazon_embeddings.ipynb  amazon_surface.ipynb  custom_response_function.ipynb  generators_fit.ipynb  generators_generate.ipynb  generators_generate.py  items_generation.ipynb  movielens_embeddings.ipynb  movielens_generators.ipynb  movielens_quality_control.ipynb  movielens_response.ipynb  simulator_time.py  transformers.py  validation_quality_control.ipynb
Sim4Rec-replay-removed/experiments/Movielens/: traint_test_split.ipynb
Sim4Rec-replay-removed/experiments/Netflix/: load_datasets.ipynb  netflix_processing.ipynb
Sim4Rec-replay-removed/experiments/response_models/: utils.py
Sim4Rec-replay-removed/experiments/response_models/data/popular_items_popularity.parquet/: part-00000-8ac17189-ecfe-473d-a9c5-d72f7f86d119-c000.snappy.parquet
Sim4Rec-replay-removed/notebooks/: embeddings.ipynb  pipeline.ipynb
Sim4Rec-replay-removed/sim4rec/modules/: evaluation.py  generator.py  simulator.py
Sim4Rec-replay-removed/sim4rec/utils/: __init__.py  convert.py
Sim4Rec-replay-removed/tests/: test_evaluation.py  test_selectors.py  test_simulator.py
demo/: README.md  cycle_time_50M_users_5seeds.csv  demo_examples.ipynb  requirements.txt  rs_performance_evaluation.ipynb  simulation_cycle_time.ipynb  synthetic_data_generation.ipynb  synthetic_data_generation_time.ipynb  synthetic_gen_time.csv
docs/: Makefile
experiments/: RU_amazon_generators.ipynb  RU_amazon_response.ipynb  RU_netflix_embeddings.ipynb  RU_netflix_generators.ipynb  RU_netflix_surface.ipynb  RU_sim_validation.ipynb  RU_validation_quality_control.ipynb  amazon_embeddings.ipynb  amazon_generators.ipynb  amazon_response.ipynb  amazon_surface.ipynb  custom_response_function.ipynb  datautils.py  generators_fit.ipynb  generators_generate.ipynb  generators_generate.py  items_generation.ipynb  movielens_embeddings.ipynb  movielens_generators.ipynb  movielens_quality_control.ipynb  movielens_response.ipynb  movielens_scenario.ipynb  movielens_surface.ipynb  netflix_embeddings.ipynb  netflix_generators.ipynb  netflix_response.ipynb  netflix_surface.ipynb  sim_validation.ipynb  simulator_time.ipynb  simulator_time.py  transformers.py  (+1 more)
(+79 files in other folders)
