[tool.poetry]
name = "sim4rec"
version = "0.0.1"
description = "Simulator for recommendation algorithms"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "sim4rec" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
sdv = "0.15.0"
replay-rec = "^0.10.0"
torch = "*"
pandas = "*"
pyspark = ">=3.0"
numpy = ">=1.20.0"
scipy = "*"

[tool.poetry.dev-dependencies]
# visualization
jupyter = "*"
jupyterlab = "*"
matplotlib = "*"
# testing
pytest = "*"
# docs
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-autodoc-typehints = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
