[tool.poetry]
name = "sim4rec"
version = "0.0.2"
description = "Simulator for recommendation algorithms"
authors = ["Alexey Vasilev",
           "Anna Volodkevich",
           "Andrey Gurov",
           "Elizaveta Stavinova",
           "Anton Lysenko"]
packages = [
    { include = "sim4rec" }
]
readme = "README.md"
repository = "https://github.com/sb-ai-lab/Sim4Rec"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
pyarrow = "*"
sdv = "0.15.0"
torch = "1.9.1"
torchmetrics="*"
pandas = "*"
pyspark = "3.1.3"
numpy = ">=1.20.0"
scipy = "1.5.4"
lightfm = {git = "https://github.com/lyst/lightfm", rev = "0c9c31e"}
notebook = "7.0.8"
torchvision = "0.10.1"

[tool.poetry.dev-dependencies]
# visualization
jupyter = "*"
jupyterlab = "*"
matplotlib = "*"
# testing
pytest-cov = "*"
pycodestyle = "*" 
pylint = "*"
# docs
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-autodoc-typehints = "*"
ghp-import = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
